# aoc25

./: .gitignore  MODULE.bazel  go.mod
.github/workflows/: ci.yml
01/: BUILD  main.go
02/: BUILD  main.go  main_test.go
03/: BUILD  main.go
04/: BUILD  main.go  main_test.go
05/: BUILD  main.go  main_test.go
06/: BUILD  main.go  main_test.go
07/: BUILD  main.go  main_test.go
08/: BUILD  main.go  main_test.go
09/: BUILD  main.go  main_test.go
10/: BUILD  main.go  main_test.go
11/: BUILD  main.go  main_test.go
12/: BUILD  main.go  main_test.go
lib/: BUILD  utils.go
